Bug fixed: Disableed text drop on IE.

--- a/app/assets/stylesheets/moments/map.css.scss
+++ b/app/assets/stylesheets/moments/map.css.scss
@@ -148,7 +148,7 @@ $bar_length: 500px;
 				}
 
 				text-shadow: 0px 1px 0px #fff;
-				filter: dropshadow(color=#fff, offx=0, offy=1);
+				// filter: dropshadow(color=#fff, offx=0, offy=1);
 				#view-detail {
 					float: right;
 					text-decoration: none;
